--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <h1>请开始你的表演！</h1>
+  <!-- <h1>请开始你的表演！</!--> -->
   <canvas id="canvas" width="100" height="100"></canvas>
   <script>
     let canvas = document.getElementById("canvas")
@@ -48,7 +48,7 @@
       }
       canvas.onmousemove = (e) => {
         if (painting) {
-          // console.log(last);
+          console.log(last);
           drawLine(last[0], last[1], e.clientX, e.clientY);
 
           last = [e.clientX, e.clientY];
