--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <!-- <h1>请开始你的表演！</!--> -->
+  <!-- <h1>请开始你的表演！</h1> -->
   <canvas id="canvas" width="100" height="100"></canvas>
   <script>
     let canvas = document.getElementById("canvas")
